--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -4,7 +4,7 @@
     align-items: center;
 }
 .container {
-    width: 1150px;
+    width: var(--default-layout-width);
     min-height: 1000px;
     display: flex;
 }
