update COmponent Button

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -21,9 +21,12 @@
 .logo {
 }
 
+.search,
+.search-result {
+    width: 361px;
+}
 .search {
     position: relative;
-    width: 361px;
     height: var(--search-height);
     background: rgba(22, 24, 35, 0.06);
     display: flex;
@@ -58,7 +61,14 @@
         border-color: rgba(22, 24, 35, 0.2);
     }
 }
-
+.search-title {
+    height: 30px;
+    padding: 5px 12px;
+    font-size: 1.4rem;
+    line-height: 20px;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+}
 .clear,
 .loading {
     position: absolute;
@@ -81,4 +91,8 @@
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
     }
+}
+.custom-login {
+    font-size: 1.4rem;
+    color: rgba(22, 24, 35, 0.75);
 }
