--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -96,3 +96,14 @@
     font-size: 1.4rem;
     color: rgba(22, 24, 35, 0.75);
 }
+.more-btn {
+    width: 20px;
+    height: 20px;
+    font-size: 2rem;
+    margin-left: 16px;
+    padding: 0 4px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+// menu
