--- a/src/components/Button/Button.modules.scss
+++ b/src/components/Button/Button.modules.scss
@@ -1,4 +1,7 @@
 .wrapper {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     min-width: 100px;
     padding: 9px 16px;
     border-radius: 4px;
@@ -9,6 +12,7 @@
     background-color: var(--white);
     border: 1px solid transparent;
     user-select: none;
+    font-family: ProximaNova, Arial, Tahoma, PingFangSC, sans-serif;
     + .wrapper {
         margin-left: 16px;
     }
@@ -18,7 +22,6 @@
 .primary {
     color: var(--white);
     background-color: rgba(254, 44, 85, 1);
-    font-family: ProximaNova, Arial, Tahoma, PingFangSC, sans-serif;
 
     &:hover {
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), #fe2c55;
@@ -64,7 +67,15 @@
 }
 
 // icon
-.icon-plus {
-    margin-right: 8px;
+.icon {
+    display: block;
+    width: 20px;
     font-size: 16px;
+    text-align: center;
+}
+.icon + .title,
+.title + .icon {
+    margin-left: 8px;
+}
+.leftIcon {
 }
