--- a/src/components/Popper/Menu/Menu.modules.scss
+++ b/src/components/Popper/Menu/Menu.modules.scss
@@ -9,6 +9,7 @@
         margin-left: 0;
         justify-content: flex-start;
         border-radius: 0;
+        line-height: 1.8rem;
         font-weight: 500;
         padding: 11px 16px;
         &:hover {
@@ -30,3 +31,25 @@
 }
 
 // menu-item
+
+// header
+.header {
+    position: relative;
+    display: flex;
+    height: 50px;
+    font-weight: 400;
+    font-size: 2rem;
+    margin-top: -8px;
+}
+.back-btn {
+    position: absolute;
+    width: 50px;
+    height: 100%;
+    font-size: 2rem;
+    background-color: transparent;
+}
+.header-title {
+    flex: 1;
+    text-align: center;
+    align-self: center;
+}
