--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -97,6 +97,19 @@
     font-size: 1.4rem;
     color: rgba(22, 24, 35, 0.75);
 }
+
+// action
+.actions {
+    display: flex;
+    align-items: center;
+}
+.actions-btn {
+    font-size: 2.2rem;
+    background-color: transparent;
+    color: #161823;
+    padding: 4px 12px;
+    cursor: pointer;
+}
 .more-btn {
     width: 20px;
     height: 20px;
@@ -105,6 +118,14 @@
     padding: 0 4px;
     background-color: transparent;
     cursor: pointer;
+}
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-left: 12px;
 }
 
 // menu
