update Font and SVG icon

--- a/src/components/Button/Button.modules.scss
+++ b/src/components/Button/Button.modules.scss
@@ -7,12 +7,12 @@
     border-radius: 4px;
     font-size: 1.6rem;
     font-weight: 700;
+    font-family: 'ProximaNova', sans-serif;
     height: 36px;
     cursor: pointer;
     background-color: var(--white);
     border: 1px solid transparent;
     user-select: none;
-    font-family: ProximaNova, Arial, Tahoma, PingFangSC, sans-serif;
     + .wrapper {
         margin-left: 16px;
     }
