--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -87,6 +87,7 @@
 
     display: flex;
     align-items: center;
+    justify-content: center;
 
     &:hover {
         background: rgba(22, 24, 35, 0.03);
