--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -19,6 +19,7 @@
         color: var(--black);
         caret-color: var(--primary);
         background-color: transparent;
+        font-family: var(--font-family);
     }
     input:not(:placeholder-shown) ~ .search-btn {
         color: var(--text-color);
