--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -6,6 +6,7 @@
 .container {
     width: var(--default-layout-width);
     min-height: 1000px;
+    max-width: 100%;
     display: flex;
     margin-top: var(--default-layout-header-height);
 }
