--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -21,7 +21,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 var(--default-layout-horizontal-spacer);
+    padding: 0 var(--default-layout-horizontal-spacer) 0 20px;
     // background-color: #ccc;
 }
 .logo {
