--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,7 @@
     --white: #fff;
 
     --font-family: 'ProximaNova', sans-serif;
+    --font-SofiaPro: 'SofiaPro', sans-serif;
     // Default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
