--- a/src/components/SuggestedAccounts/SuggestedAccounts.module.scss
+++ b/src/components/SuggestedAccounts/SuggestedAccounts.module.scss
@@ -63,6 +63,7 @@
 .full-name {
     font-family: var(--font-family);
     font-size: 1.2rem;
+    margin-top: 2px;
 }
 .more-btn {
     display: flex;
