--- a/src/layouts/DefaultLayout/Sidebar/Sidebar.module.scss
+++ b/src/layouts/DefaultLayout/Sidebar/Sidebar.module.scss
@@ -2,6 +2,7 @@
     width: 348px;
     min-height: 1000px;
     padding: 20px 0 26px 8px;
-    max-height: 100rem;
+    height: 100%;
     overflow-y: auto;
+    // top: var(--default-layout-header-height);
 }
