--- a/src/pages/Home/VideoUser/VideoUser.modules.scss
+++ b/src/pages/Home/VideoUser/VideoUser.modules.scss
@@ -11,7 +11,7 @@
     cursor: pointer;
 }
 .content-video {
-    margin-left: 12px;
+    padding-left: 12px;
     width: 100%;
     position: relative;
 }
